2005-03-02  Daniel P. Ottavio  <dottavio@ic.sunysb.edu>

	* AUTHORS: add Dan Ottavio.

	* scripts/amd.conf.5: document new debug_mtab_file option.

	* scripts/amd.conf-sample (debug_mtab_file): show example.

	* doc/am-utils.texi (debug_mtab_file Parameter): document new
	option.

	* conf/mtab/mtab_{file,mach3}.c (open_locked_mtab): if mtab file
	doesn't exist by the time Amd tries to exist, return a 0 rather
	than hang indefinitely.

	* amd/conf.c (gopt_debug_mtab_file): new function to parse
	debug_mtab_file option.

	* amd/amd.h: placeholder for debug_mtab_file string.
	Define default debug_mtab_file to "/tmp/mtab".

	* NEWS: document new debug_mtab_file option.

2005-03-02  Erez Zadok  <ezk@cs.sunysb.edu>

	* conf/transp/transp_{sockets,tli}.c (amu_get_myaddress): when
	users want Amd's NFS service to bind to some arbitrary "localhost"
	address, show which address was actually resolved and bound to.

2005-03-01  Erez Zadok  <ezk@cs.sunysb.edu>

	* amd/srvr_nfs.c (start_nfs_pings): move code from elsewhere
	(update_nfs_pingval) that initializes the pinger, as well as turns
	it on/off as needed, and handles changing its value.  This is to
	avoid races and other infinite-loop conditions that could result
	in ping storms.

	* amd/srvr_amfs_auto.c (amfs_generic_find_srvr): when creating a
	new file server structure, default the ping value to AM_PINGER
	(30sec) and set the FSF_PING_UNINIT flag.

	* amd/amd.h (FSF_PING_UNINIT): new flag to tell whether the NFS
	pinger had been initialized for a given file server.

	* scripts/ctl-amd.in (stop): no need to check if
	/var/lock/subsys/amd file exists if you do an rm -f afterward.
	Ensure that proper return value is returned from script.

	* NEWS, doc/am-utils.texi (opts Option): update meaning of ping=N
	so that if N=-1, pings are off; if N=0, pings are set to the
	default value (currently 30 seconds).

2005-02-28  Erez Zadok  <ezk@cs.sunysb.edu>

	* amd/nfs_prot_svc.c (nfs_program_2): on TLI system, try to call