@@ -38,7 +38,7 @@
 .\"
 .\"	%W% (Berkeley) %G%
 .\"
-.\" $Id: amd.conf.5,v 1.34 2005/03/04 18:42:43 ezk Exp $
+.\" $Id: amd.conf.5,v 1.35 2005/03/05 04:49:16 ezk Exp $
 .\"
 .TH AMD.CONF 5 "7 August 1997"
 .SH NAME
@@ -207,8 +207,8 @@ sub-directories for its real mount points.
 .BR cache_duration " (numeric, default=300)"
 Same as the
 .B \-c
-option to amd.  Sets the duration in seconds that looked up map entries
-remain in the cache.
+option to amd.  Sets the duration in seconds that looked-up or mounted map
+entries remain in the cache.
 
 .TP
 .BR cluster " (string, default no cluster)"
